--- a/nearsQ/index3.html
+++ b/nearsQ/index3.html
@@ -26,10 +26,10 @@
               </a>
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#Home">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#About">About</a>
+                <a class="nav-link" href="index.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Camp Info">Camp Info</a>
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="#Volunteer">Volunteer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Alert">Alert</a>
+                <a class="nav-link" id="navbarAlertLink" href="#Alert">Alert</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Contact">Contact</a>
@@ -186,6 +186,23 @@
         function openmenu(){
             sidemenu.style.right="0";
         }
+
+        // Function to navigate to index2.html
+        function navigateToIndex2() {
+            window.location.href = 'index2.html';
+        }
+
+        // Event listener for the "Alert" link in the navbar
+        document.getElementById('navbarAlertLink').addEventListener('click', function() {
+            navigateToIndex2();
+        });
+
+        // Event listener for the "Alert" card
+        document.getElementById('cardAlertLink').addEventListener('click', function() {
+            navigateToIndex2();
+        });
+
+        
     </script>
 </body>
 </html>
