--- a/nearsQ/index2.html
+++ b/nearsQ/index2.html
@@ -43,10 +43,10 @@
               </a>
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#Home">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#About">About</a>
+                <a class="nav-link" href="index.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Camp Info">Camp Info</a>
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="#Volunteer">Volunteer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#Alert">Alert</a>
+                <a class="nav-link" id="navbarAlertLink" href="#Alert">Alert</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Contact">Contact</a>
@@ -131,6 +131,25 @@
             alert('Please provide name and phone number.');
         }
     });
+
+    document.querySelector('.navbar-nav .nav-link[href="#Guidelines"]').addEventListener('click', function() {
+            window.location.href = 'index3.html'; // Navigate to index3.html
+        });
+
+        // Add event listener for "Guidelines" card
+        document.querySelector('.ab2 .card-title').addEventListener('click', function() {
+            window.location.href = 'index3.html'; // Navigate to index3.html
+        });
+
+        document.querySelector('.navbar-nav .nav-link[href="#Camp Info"]').addEventListener('click', function() {
+        window.location.href = 'index4.html'; // Navigate to index4.html
+    });
+
+    // Add event listener for "Volunteer" in the navigation bar
+    document.querySelector('.navbar-nav .nav-link[href="#Volunteer"]').addEventListener('click', function() {
+        window.location.href = 'camp.html'; // Navigate to camp.html
+    });
+
 </script>
 </body>
 </html>
